# docassemble-MACourts

./: .bumpversion.cfg  MANIFEST.in  index.html  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  unit-test.yml  update_ma_zip_data.yml
docassemble/MACourts/: macourts.py  test_local_court_json_files.yml
docassemble/MACourts/data/questions/: cache_macourts.yml  court_test_bulk.yml  courts_tester.yml  courts_to_xlsx.yml  test_get_court_by_code.yml  test_list_ma_courts.yml  test_local_court_json_files.yml  test_macourts.yml
docassemble/MACourts/data/sources/: city_boundary.geojson  court_address_manual_verifications.json  court_address_validation.csv  ma_zip_codes.json
docassemble/MACourts/test/: test_court_finder.py  test_docket_numbers.py
scripts/: apply_verified_address_updates.py  generate_ma_zip_data.py  validate_court_addresses.py
